# LSPatch

./: .gitignore  .gitmodules  NOTICE.txt  README.md  README_en.md  SECURITY.md  build.gradle  build.gradle.kts  crowdin.yml  gradle.properties  main.yml  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: android.yml  crowdin.yml  main.yml
apksigner/: build.gradle
apkzlib/: build.gradle  build.gradle.kts
app/: build.gradle  build.gradle.kts
appstub/: build.gradle  build.gradle.kts  proguard-rules.pro
axmlprinter/: build.gradle  build.gradle.kts
gradle/: lspatch.versions.toml
gradle/wrapper/: gradle-wrapper.properties
imanager/: build.gradle  build.gradle.kts
jar/: build.gradle.kts
loader/: .gitignore  README.md  settings.gradle
loader/app/: proguard-rules.pro
loader/axmlprinter/: build.gradle
manager/: build.gradle  build.gradle.kts  proguard-rules-debug.pro  proguard-rules.pro
meta-loader/: build.gradle.kts  proguard-rules.pro
patch/: build.gradle  build.gradle.kts
patch-jar/: build.gradle.kts
patch-loader/: build.gradle.kts
patch-loader/src/main/jni/: CMakeLists.txt
patch-loader/src/main/jni/api/: patch_main.cpp
patch-loader/src/main/jni/include/art/runtime/: oat_file_manager.h
patch-loader/src/main/jni/include/art/runtime/jit/: profile_saver.h
patch-loader/src/main/jni/src/: config_impl.h  patch_loader.cpp  patch_loader.h
patch-loader/src/main/jni/src/jni/: bypass_sig.cpp  bypass_sig.h
share/: build.gradle  build.gradle.kts
xpatch/: build.gradle
(+313 files in other folders)
